[package]
name = "pyth-benchmark-rs"
version = "0.1.0"
edition = "2021"
authors = ["Ibraheem Kehinde"]
description = "A Rust client for streaming and processing historical OHLC price data from the Pyth Network oracle"
license = "MIT OR Apache-2.0"
repository = "https://github.com/devgreek/pyth-benchmark-rs"
keywords = ["pyth", "oracle", "crypto", "trading", "price-feed"]
categories = ["api-bindings", "web-programming::http-client"]
readme = "README.md"

[lib]
name = "pyth_benchmark_rs"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
futures-util = "0.3.31"
bytes = "1.10.1"
